# eramegaten-engine

./: .gitignore  README.md  pyproject.toml
eramegaten_engine/: __init__.py  builtins.py  cli.py  csvdb.py  expr.py  formatter.py  frontend.py  gui.py  loader.py  memory.py  model.py  native_save.py  qt_gui.py  runtime.py  tk_gui.py
tests/: test_engine.py  test_frontend.py  test_qt_frontend.py
