[project]
name = "eramegaten-engine"
version = "0.1.0"
description = "A modern Python 3.11 EraBasic/Emuera-compatible runtime for eraMegaten."
requires-python = ">=3.11"
authors = [{name = "Codex"}]

[project.scripts]
eramegaten = "eramegaten_engine.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
